Update from https://github.com/VodaPay-Gateway/vodapay-gateway-api/commit/82fea6d60b3016513043bdbe79f99ff2f7851d43
